<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_top"
    android:layout_width="fill_parent"
    android:padding="0dp" >

    <FrameLayout
        style="@style/frame_layout_top" >

        <ImageButton
            style="@style/button_text"
            android:layout_width="60dp"
            android:layout_height="47dp"
            android:layout_gravity="left"
            android:onClick="cancelar"
            android:src="@drawable/ic_menu_back"/>

        <TextView style="@style/frame_layout_top_textview" />

        <ImageView style="@style/frame_layout_top_imagemview" />

        <Button
            style="@style/button_text"
            android:layout_width="60dp"
            android:layout_height="47dp"
            android:layout_gravity="right"
            android:background="@drawable/btn_green"
            android:onClick="fazerLogout"
            android:text="@string/btn_logout"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/barra_customizada" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/label_trocar_senha"
            android:textColor="@color/gray"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <EditText
            android:id="@+id/usuario"
            style="@style/bg_editext"
            android:hint="@string/hint_usuario"
            android:inputType="textPersonName"
            android:maxLength="32" >
        </EditText>
        
        <EditText
            android:id="@+id/senha_atual"
            style="@style/bg_editext"
            android:hint="@string/hint_senha_atual"
            android:inputType="textPassword"
            android:maxLength="16" />

        <EditText
            android:id="@+id/nova_senha"
            style="@style/bg_editext"
            android:hint="@string/hint_nova_senha"
            android:inputType="textPassword"
            android:maxLength="16" />

        <EditText
            android:id="@+id/repetir_senha"
            style="@style/bg_editext"
            android:hint="@string/hint_repetir_senha"
            android:inputType="textPassword"
            android:maxLength="16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                style="@style/button_text"
                android:layout_width="140dp"
                android:onClick="cancelar"
                android:text="@string/btn_cancelar" />

            <Button
                style="@style/button_text"
                android:layout_width="140dp"
                android:layout_gravity="right"
                android:layout_marginLeft="20dp"
                android:onClick="trocar"
                android:text="@string/btn_alterar" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>