<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_top" >

    <FrameLayout style="@style/frame_layout_top" >

        <TextView style="@style/frame_layout_top_textview" />

        <ImageView style="@style/frame_layout_top_imagemview" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/barra_customizada" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/label_recuperar_senha"
            android:textColor="@color/gray"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/email"
            style="@style/bg_editext"
            android:hint="@string/hint_email"
            android:inputType="textPersonName"
            android:maxLength="64" >
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                style="@style/button_text"
                android:layout_width="140dp"
                android:onClick="cancelar"
                android:text="@string/btn_cancelar" />

            <Button
                style="@style/button_text"
                android:layout_width="140dp"
                android:layout_gravity="right"
                android:layout_marginLeft="20dp"
                android:onClick="recuperarSenha"
                android:text="@string/btn_enviar" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            style="@style/bg_no_backgroud"
            android:layout_marginBottom="52dp"
            android:onClick="cadastrar"
            android:text="@string/btn_link_cadastrar" />
    </LinearLayout>

</LinearLayout>