<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <FrameLayout
        android:id="@+id/frameLayout"
        style="@style/frame_layout_top" >

        <ImageButton
            style="@style/button_text"
            android:layout_width="60dp"
            android:layout_height="47dp"
            android:layout_gravity="left"
            android:background="@drawable/btn_green"
            android:onClick="fecharView"
            android:src="@drawable/ic_menu_back" />

        <TextView
            android:id="@+id/txt_placa"
            android:layout_width="140dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:background="@drawable/placa_carro"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            style="@style/button_text"
            android:layout_width="60dp"
            android:layout_height="47dp"
            android:layout_gravity="right"
            android:onClick="fazerLogout"
            android:text="@string/btn_logout"
            android:textSize="17sp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/label_sensores"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/frameLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/barra_customizada" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/label_sensores"
            android:textColor="@color/gray"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sensores_desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_sensores"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:weightSum="3" >

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/label_presenca" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/label_audio" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/label_movimento" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sensores"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sensores_desc"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:weightSum="3" >

        <ToggleButton
            android:id="@+id/toggle_presenca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@null"
            android:button="@drawable/bg_toggle"
            android:enabled="false"
            android:textOff=""
            android:textOn="" />

        <ToggleButton
            android:id="@+id/toggle_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="80dp"
            android:background="@null"
            android:button="@drawable/bg_toggle"
            android:enabled="false"
            android:textOff=""
            android:textOn="" />

        <ToggleButton
            android:id="@+id/toggle_movimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="80dp"
            android:background="@null"
            android:button="@drawable/bg_toggle"
            android:enabled="false"
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <TextView
        android:id="@+id/lista_vazia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:drawableTop="@drawable/ic_menu_clear_playlist"
        android:text="@string/label_lista_vazia_ocorrencia" />

    <View
        android:id="@+id/divisor"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/sensores"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/lista"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divisor"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:paddingBottom="160dp" >

        <ListView
            android:id="@+id/listView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:divider="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="125dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:gravity="bottom" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/barra_customizada"
            android:gravity="center"
            android:text="@string/label_controles"
            android:textColor="@color/gray"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="70dp"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_excluir"
            style="@style/button_text"
            android:layout_width="170dp"
            android:layout_gravity="bottom"
            android:onClick="excluir"
            android:text="@string/btn_excluir" />

        <Button
            android:id="@+id/btn_editar"
            style="@style/button_text"
            android:layout_width="170dp"
            android:layout_gravity="bottom|right"
            android:layout_marginLeft="10dp"
            android:onClick="editar"
            android:text="@string/btn_editar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="50dp"
        android:gravity="bottom">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/label_ctrl_sistema" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/label_ctrl_carro" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/label_ctrl_alarme" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom" >

        <ToggleButton
            android:id="@+id/toggle_ctrl_sistema"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_weight="1"
            android:onClick="controle_srsv"
            android:textOff="DESLIGADO"
            android:textOn="LIGADO" />

        <ToggleButton
            android:id="@+id/toggle_ctrl_carro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_weight="1"
            android:onClick="controle_carro"
            android:textOff="DESLIGADO"
            android:textOn="LIGADO" />

        <ToggleButton
            android:id="@+id/toggle_ctrl_alarme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_weight="1"
            android:onClick="controle_alarme"
            android:textOff="DESLIGADO"
            android:textOn="LIGADO" />
    </LinearLayout>

</RelativeLayout>